--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div> <!-- .title end -->
         <div class="list">
             <div class="ltem"> <!-- 1  -->
-                <img src="img/main.png" alt="웹사이트이름" />
+                <img src="img/main-1.png" alt="웹사이트이름" />
                 <div class="info">
                     <h4>이름 웹사이트 리뉴얼</h4>
                     <p>제작목적, 콘셉트, 웹사이트 리뉴얼을 위해 기획, 디자인, HTML, CSS언어를 활용하여 웹사이트를 구현하였습니다.</p>
